--- a/sample3.html
+++ b/sample3.html
@@ -64,21 +64,93 @@ Single-stranded M13mp18 DNA were purchased from BioLabs Inc.
 <h3>Method Ⅰ---Designing the DNA origami</h3>
 <p>
 We designed our structure based on a previously established DNA origami
- <a href="sample7.html" title="sample7.html">[1]</a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
+ <a href="#(1)"><sup>(1)</sup></a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
 The tip of each triangle in the image below is where we attached the AuNP.
 </p>
 
 
-<h3>Method Ⅱ---Synthesis of origami rectangle <a href="#(1)"font size="5" >(1)</a>,<a href="#(3)"font size="5" >(3)</a></h3>
+<h3>Method Ⅱ---Synthesis of origami rectangle <a href="#(1)"font size="5" ><sup>(1)</sup></a><sup>,</sup><a href="#(3)"font size="5" ><sup>(3)</sup></a></h3>
 <ul2>
 <li>Dissolve each staple strands in 1×TAE buffer and prepare 0.2mM staple solution.</li>
 <li>Mix all staple solution (2μl of each) to prepare staple-mix solution.</li>
-<li>Mix reagents for PCR as following order in micro tube;</li>
-　　・Milli Q 7.8μl<br>
-　　・10×TAE 2μl<br>
-　　・50mM Magnesium Acetate 5μl<br>
-　　・Staple DNA solution 1.2μl<br>
-　　・Scaffold DNA solution 4μl<br>
+<li>Mix reagents for PCR as following order in micro tube(Table1.);</li><style>
+<br>
+</ul2>
+
+table {
+	border-collapse: collapse;
+}
+th {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ff9999;
+}
+td {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ffffff;
+}
+
+</style>
+
+<center>
+<br>
+Table1. Mix reagents for PCR
+<table>
+	<tbody>
+		<tr>
+			<th>
+				Milli Q
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.9μl
+			</td>
+		</tr>
+		<tr>
+			<th>
+				10×TAE
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3μl
+			</td>
+		</tr>
+		<tr>
+			<th>
+				12.5mM Magnesium acetate
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.5μl
+			</td>
+		</tr>
+		<tr>
+			<th>
+				100nM Staple DNA solution
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.6μl
+			</td>
+		</tr>
+		<tr>
+			<th>
+				20nM Scaffold DNA solution
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12μl
+			</td>
+		</tr>
+		<tr>
+			<th>
+				total
+			</th>
+			<td>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;30μl
+			</td>
+		</tr>
+	</tbody>
+</table>
+</center>
+<br>
+<ul2>
 <li>Anneal sample as following conditions </li>
 　　95℃ 5min<br>
 　　↓<br>
@@ -87,78 +159,161 @@ The tip of each triangle in the image below is where we attached the AuNP.
 <li>Resulting solution contains DNA origami rectangles.</li>
 </ul2>
 
-<h3>MethodⅢ---Preparation of AuNP-anchor oligo DNA conjugates <a href="#(2)"font size="5" >(2)</a></h3>
+<h3>MethodⅢ---Preparation of AuNP-anchor oligo DNA conjugates <a href="#(2)"font size="5" ><sup>(2)</sup></a></h3>
 <ul2>
 <li>Dissolve SH-modified ahchor oligo DNA in 0.072M DTT for 1h at room temperature to remove the protective group.</li>
 <li>Purify anchor oligo DNA by using NAP-5 column.</li>
 <li>Dilute resulting solution with 10mM Tris-HCl pH7.0 and measure Abs at 260 nm. (0.7Abs)</li>
 <li>Calculate the concentration by using the formulas below.</li>
 <center>
-0.7(Abs)×0.85×5=(2.975 OD)⁄850μl=  (3.5 OD)⁄(1000μl )
-3.5OD⁄1000μl×35.1μg⁄OD=( 122.85μg)⁄ml
-→0.0317×〖10〗^(-6)  mol/ml→0.0317×106 nM
+<i>0.7(Abs)×0.85×5=(2.975 OD) ⁄ 850μl=  (3.5 OD) ⁄ (1000μl )<br>
+3.5OD ⁄ 1000μl×35.1μg ⁄ OD=(122.85μg) ⁄ ml<br>
+→0.0317×10<sup>-6</sup> mol / ml→0.0317×10<sup>6</sup> nM</i><br>
 </center>
 <br>
-<li>Concentration of AuNP (diemeter:5nm) solution ; 5.5×106 nano-particles /liter</li>
+<li>Concentration of AuNP (diemeter:5nm) solution ; <B>5.5×10<sup>6</sup> nano-particles /liter</B></li>
 </ul2>
 <p>
  Calculate the number of ahcnor oligo DNA moles we needed to prepare AuNP-anchor oligo DNA conjugates by using the fomulas below.</p>
  <center>
-Mol conjugated oligonucleotide=4πr^2×C_n×35pmol/〖cm〗^2 ×V<br>
-r;radius of AuNP(nm)  Cn;concentration of AuNP solution<br>
- (nano-particles/liter)  v;volume of AuNP solution (L)<br>
+<i>Mol conjugated oligonucleotide=4πr<sup>2</sup>×C<sub>n</sub>×(35pmol/cm<sup>2</sup>)×V</i><br>
+r ; radius of AuNP(nm) <br>C<sub>n</sub> ; concentration of AuNP solution (nano-particles/liter) <br> v ; volume of AuNP solution (L)<br>
 <br>
 <br>
 
-r ;radius of nano particle  C_n  ;concentration of the nano particle solution (particles⁄liter) <br>  
- v ;volume pf the nano particle solution <br>
-4π(2.5nm)^2×5.5×〖10〗^6 (particles⁄(L)×(35(pmol)⁄(〖cm〗^2)×1(ml)))=1.511nmol<br>
- </center>
-
+<i>r;radius of nano particle  C<sub>n</sub>;concentration of the nano particle solution (particles⁄liter) <br>  
+ v;volume pf the nano particle solution <br>
+4π(2.5nm)<sup>2</sup>×5.5×10<sup>6</sup>(particles ⁄ L)×35(pmol ⁄ cm<sup>2</sup>)×1(ml)=1.511nmol<br>
+ </i></center>
+<br>
 volume of AuNP solution ; 1ml<br>
-mol conjugated anchor oligo DNA ; 1.511nmol<br>
+<b>mol conjugated anchor oligo DNA ; 1.511nmol</b><br>
 <br>
 <br>
 <ul2>
-<li>Concentration of purified anchor oligo DNA solution ;  0.317×106 nM</li>
+<li>Concentration of purified anchor oligo DNA solution ;  <b>0.317×10<sup>6</sup>nM</b></li>
 <li>Mix 1ml AuNP solution and 94.64μl anchor oligo DNA solution (contains 3nmol oligo).</li>
 <li>Rotate the solution 16h at room temperature at low speed.</li>
 <li>Add 1M NaCl and 0.1M sodium phosphate buffer (137μl of each) to the solution.</li>
   <p>Final concentration ; 0.1M NaCl 10mM phosphate buffer</p></li>
 <li>Rotate the solution 24h at room temperature at low speed.</li>
 <li>Centrifuge 60min at 45,000g.</li>
-<li>Remove the supernatant and resuspend the red oil in the same volume of 0.1M NaCl/10mM sodium phosphate buffer.</li>
+<li>Remove the supernatant and resuspend the red oil in the same volume of 0.1M NaCl / 10mM sodium phosphate buffer.</li>
 <li>Centrifuge 60min at 45,000g.</li>
-<li>Remove the supernatant again and resuspend the red oil in the same volume of 0.3M NaCl/0.01% sodium azide/10mM sodium phosphate buffer.</li>
+<li>Remove the supernatant again and resuspend the red oil in the same volume of 0.3M NaCl / 0.01% sodium azide / 10mM sodium phosphate buffer.</li>
 <li>Measure Absorbance at 520nm. (0.26Abs)</li>
 <li>Calculate the concentration of the conjugate solution by using folulas below.</li>
 </ul2>
 <center>
-C_n=(A_520×1)(〖10〗^7×b)
-b ; path length of the cuvette (typically 1cm)
-Cn=(0.26(Abs)×1)/(107×0.5)=0.52×107 M= 52nM
+<i>C<sub>n</sub>=(A<sub>520</sub>×1)(10<sup>7</sup>×b)</i><br>
+b ; path length of the cuvette (typically 1cm)<br>
+C<sub>n</sub>=(0.26(Abs)×1) / (10<sup>7</sup>×0.5)=0.52×10<sup>7</sup>M=<b>52nM</b>
 </center>
 <br>
 <br>
 <h3>Method Ⅳ---Attaching AuNP on the surface of DNA origami and colum purification</h3>
 <ul2>
 <li>Mix 15μl DNA origami solution and 172.5μl AuNP-oligo solution and leave 1h at room temperature.</li>
-<li>Purify solution to remove excess staples and AuNP-oligo by using Sephacryl S-300HR  (GE Heaithcare). <a href="#(3)"font size="5" >(3)</a></li>
+<li>Purify solution to remove excess staples and AuNP-oligo by using Sephacryl S-300HR  (GE healthcare). <a href="#(3)"font size="5" ><sup>(3)</sup></a></li>
 </ul2>
-<h3>Method Ⅴ---AFM observation <a href="#(3)"font size="5" >(3)</a></h3>
+<h3>Method Ⅴ---AFM observation <a href="#(3)"font size="5" ><sup>(3)</sup></a></h3>
 <ul2 type="disc">
 <li>Before AFM, add 2μl glue DNA solution to 98μl purified DNA origami with AuNP solution and leave it more than 1h.</li>
 <li>1μl sample were adsorbed on the mica sheet for 5min at room temperature and then add 50μl 1×TAE buffer.</li>
-<li>Get AFM images using Multimode 8 (Bruker). </li>
+<li><b>Get AFM images</b> using Multimode 8 (Bruker). </li>
 <li>AFM probes ; SCANASYST-FLUID (Nitride Coated Silicon Tip on a Nitride Cantilever), SCANASYST-FLUID＋(Silicon Tip on Nitride Lever</li>
 
-
-
+<h3>Method Ⅵ---Absorbance determination </h3>
+<li><b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li>
+<li>Cuvette ;  5μl micro cell (stepped type)  (JASCO)</li>
+<br>
+<center>Table2. Sample solution 
+<style>
+table {
+	border-collapse: collapse;
+}
+th {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ff9999;
+}
+td {
+	border: solid 1px #666666;
+	color: #000000;
+	background-color: #ffffff;
+}
+thead th {
+	background-color: #FF9999;
+}
+</style>
+<table>
+	<thead>
+		<tr>
+			<th>
+				
+			</th>
+			<th>
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;DNA origami&nbsp;&nbsp;&nbsp;&nbsp;</center>
+			</th>
+			<th>
+				<center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Glue DNA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</center> 
+			</th>
+			<th>
+				AuNP-Oligo DNA
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;1&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>ー</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;2&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>○</center>
+			</td>
+			<td>
+				<center>ー</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				<center>&nbsp;&nbsp;3&nbsp;&nbsp;</center>
+			</th>
+			<td>
+				<center>ー</center>
+			</td>
+			<td>
+				<center>ー</center>
+			</td>
+			<td>
+				<center>○</center>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</center>
 
 <h2 id="step3">REFERENCE</h2>
 <a id="(1)">(1)</a> Paul W.K.Rothemund. Folding DNA to create nanoscale shapes and patterns. Nature. 2006 Mar 16;440(7082):297-302.<br>
 <a id="(2)">(2)</a> Taton TA. Preparation of gold nanoparticle-DNA conjugates. Current Protocols in Nucleic Acid Chemistry. 2002 Aug;Chapter 12:Unit 12.2.<br>
-<a id="(3)">(3)</a><a href="sample7.html" title="sample7.html">[1]</a> Wickham SF, Endo M, Katsuda Y, Hidaka K, Bath J, Sugiyama H, Turberfield AJ. Direct observation of stepwise movement of a synthetic molecular transporter. Nature Nanotechnology. 2011 Mar;6(3):166-9. <br>
+<a id="(3)">(3)</a>Wickham SF, Endo M, Katsuda Y, Hidaka K, Bath J, Sugiyama H, Turberfield AJ. Direct observation of stepwise movement of a synthetic molecular transporter. Nature Nanotechnology. 2011 Mar;6(3):166-9. <br>
 
    
 
