--- a/sample2.html
+++ b/sample2.html
@@ -77,7 +77,7 @@ where f(x,t) is the magnitude of wave, k is wavenumber, x is the observation poi
 <p>
  The total displacement at a certain point is the sum of that of the individual waves. Therefore, the total magnitude is given by;
  <br>
-f_total (x,t) = ∑_(x_0)^n▒〖sin(k(x-x_0)-ωt)
+<img src="./image/siki3.jpg" alt="サンプル" width="350px" height="55px">
 <br>
 where n is the number of wave generation points.
 </p>
@@ -91,12 +91,12 @@ Solar spectrum can be calculated with Planck’s law.
 <img src="./image/siki.jpg" alt="サンプル" width="170px" height="70px">
 <p>
  
-Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 [J*s],  c is speed of light 2.998×108[m/s], kB is Boltzmann constant 1.381×10-23[J/K] and T is temperature 5800[K].
+Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 [J*s],  c is speed of light 2.998×108[m/s], kb is Boltzmann constant 1.381×10-23[J/K] and T is temperature 5800[K].
 
 
 
 
-<h2 id="chemical bond">CHEMICAL BOND</h2>
+<h2 id="chemical bond">GOLD SULFUR BOND</h2>
 <p class="">
 
 </p>
@@ -114,11 +114,11 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 </ul>
 <p>
 <ul>
-<a href="#gold particle"><li>GOLD PARTICLE</li></a>
+<a href="#gold particle" style="text-align : left"><li>GOLD PARTICLE</li></a>
 </ul>
 <p>
 <ul>
-<a href="#chemical bond"><li>CHEMICAL BOND</li></a>
+<a href="#chemical bond" style="text-align : left"><li>GOLD SULFUR BOND</li></a>
 </ul>
 </td>
 </div>
