--- a/sample3.html
+++ b/sample3.html
@@ -64,16 +64,16 @@ Single-stranded M13mp18 DNA were purchased from BioLabs Inc.
 <h3>Method Ⅰ---Designing the DNA origami</h3>
 <p>
 We designed our structure based on a previously established DNA origami
- <a href="#(1)"><sup>(1)</sup></a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
-The tip of each triangle in the image below is where we attached the AuNP.
+ <a href="#(1)"><sup>(1)</sup></a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>&nbsp;&nbsp;&nbsp;We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
+&nbsp;&nbsp;&nbsp;The tip of each triangle in the image below is where we attached the AuNP.
 </p>
 
 
 <h3>Method Ⅱ---Synthesis of origami rectangle <a href="#(1)"font size="5" ><sup>(1)</sup></a><sup>,</sup><a href="#(3)"font size="5" ><sup>(3)</sup></a></h3>
 <ul2>
-<li>Dissolve each staple strands in 1×TAE buffer and prepare 0.2mM staple solution.</li>
-<li>Mix all staple solution (2μl of each) to prepare staple-mix solution.</li>
-<li>Mix reagents for PCR as following order in micro tube(Table1.);</li><style>
+1. Dissolve each staple strands in 1×TAE buffer and prepare 0.2mM staple &nbsp;&nbsp;&nbsp;&nbsp;solution.</li><br>
+2. Mix all staple solution (2μl of each) to prepare staple-mix solution.</li><br>
+3. Mix reagents for PCR as following order in micro tube(Table1.);</li><style>
 <br>
 </ul2>
 
@@ -151,19 +151,20 @@ Table1. Mix reagents for PCR
 </center>
 <br>
 <ul2>
-<li>Anneal sample as following conditions </li>
+4. Anneal sample as following conditions </li><br>
 　　95℃ 5min<br>
 　　↓<br>
 　　95℃→20℃　gradually lower the annealing temperature <br>
            　　  ( 1℃/min in 0.1℃ steps)<br>
-<li>Resulting solution contains DNA origami rectangles.</li>
+5. Resulting solution contains DNA origami rectangles.</li><br>
 </ul2>
+<center><img src="./image/ex2.jpg" alt="サンプル" width="518px" height="226px"></center>
 
 <h3>MethodⅢ---Preparation of AuNP-anchor oligo DNA conjugates <a href="#(2)"font size="5" ><sup>(2)</sup></a></h3>
 <ul2>
-<li>Dissolve SH-modified ahchor oligo DNA in 0.072M DTT for 1h at room temperature to remove the protective group.</li>
-<li>Purify anchor oligo DNA by using NAP-5 column.</li>
-<li>Dilute resulting solution with 10mM Tris-HCl pH7.0 and measure Abs at 260 nm. (0.7Abs)</li>
+1. Dissolve SH-modified ahchor oligo DNA in 0.072M DTT for 1h at room &nbsp;&nbsp;&nbsp;&nbsp;temperature to remove the protective group.</li><br>
+2. Purify anchor oligo DNA by using NAP-5 column.</li><br>
+3. Dilute resulting solution with 10mM Tris-HCl pH7.0 and measure Abs at &nbsp;&nbsp;&nbsp;&nbsp;260 nm. (0.7Abs)</li><br>
 <li>Calculate the concentration by using the formulas below.</li>
 <center>
 <i>0.7(Abs)×0.85×5=(2.975 OD) ⁄ 850μl=  (3.5 OD) ⁄ (1000μl )<br>
@@ -171,38 +172,37 @@ Table1. Mix reagents for PCR
 →0.0317×10<sup>-6</sup> mol / ml→0.0317×10<sup>6</sup> nM</i><br>
 </center>
 <br>
-<li>Concentration of AuNP (diemeter:5nm) solution ; <B>5.5×10<sup>6</sup> nano-particles /liter</B></li>
+<li>Concentration of AuNP (diemeter:5nm) solution ; <b>5.5×10<sup>6</sup> nano-particles &nbsp;&nbsp;&nbsp;&nbsp;/liter</b></li>
 </ul2>
-<p>
- Calculate the number of ahcnor oligo DNA moles we needed to prepare AuNP-anchor oligo DNA conjugates by using the fomulas below.</p>
+<br>
+ <li>Calculate the number of ahcnor oligo DNA moles we needed to prepare &nbsp;&nbsp;&nbsp;&nbsp;AuNP-anchor oligo DNA conjugates by using the fomulas below.</li>
  <center>
 <i>Mol conjugated oligonucleotide=4πr<sup>2</sup>×C<sub>n</sub>×(35pmol/cm<sup>2</sup>)×V</i><br>
-r ; radius of AuNP(nm) <br>C<sub>n</sub> ; concentration of AuNP solution (nano-particles/liter) <br> v ; volume of AuNP solution (L)<br>
 <br>
-<br>
-
-<i>r;radius of nano particle  C<sub>n</sub>;concentration of the nano particle solution (particles⁄liter) <br>  
- v;volume pf the nano particle solution <br>
-4π(2.5nm)<sup>2</sup>×5.5×10<sup>6</sup>(particles ⁄ L)×35(pmol ⁄ cm<sup>2</sup>)×1(ml)=1.511nmol<br>
+<i>r ; radius of AuNP (nm)<br>
+C<sub>n</sub> ; concentration of AuNP solution (nano-particles ⁄ liter) <br>  
+ v ; volume of AuNP solution (L) <br>
+ <br>
+∴4π(2.5nm)<sup>2</sup>×5.5×10<sup>6</sup>(particles ⁄ L)×35(pmol ⁄ cm<sup>2</sup>)×1(ml)=1.511nmol<br>
  </i></center>
 <br>
-volume of AuNP solution ; 1ml<br>
 <b>mol conjugated anchor oligo DNA ; 1.511nmol</b><br>
-<br>
+(volume of AuNP solution ; 1ml)<br>
 <br>
 <ul2>
 <li>Concentration of purified anchor oligo DNA solution ;  <b>0.317×10<sup>6</sup>nM</b></li>
-<li>Mix 1ml AuNP solution and 94.64μl anchor oligo DNA solution (contains 3nmol oligo).</li>
-<li>Rotate the solution 16h at room temperature at low speed.</li>
-<li>Add 1M NaCl and 0.1M sodium phosphate buffer (137μl of each) to the solution.</li>
-  <p>Final concentration ; 0.1M NaCl 10mM phosphate buffer</p></li>
-<li>Rotate the solution 24h at room temperature at low speed.</li>
-<li>Centrifuge 60min at 45,000g.</li>
-<li>Remove the supernatant and resuspend the red oil in the same volume of 0.1M NaCl / 10mM sodium phosphate buffer.</li>
-<li>Centrifuge 60min at 45,000g.</li>
-<li>Remove the supernatant again and resuspend the red oil in the same volume of 0.3M NaCl / 0.01% sodium azide / 10mM sodium phosphate buffer.</li>
-<li>Measure Absorbance at 520nm. (0.26Abs)</li>
-<li>Calculate the concentration of the conjugate solution by using folulas below.</li>
+<br>
+4. Mix 1ml AuNP solution and 94.64μl anchor oligo DNA solution (contains &nbsp;&nbsp;&nbsp;&nbsp;3nmol oligo).</li><br>
+5. Rotate the solution 16h at room temperature at low speed.</li><br>
+6. Add 1M NaCl and 0.1M sodium phosphate buffer (137μl of each) to the &nbsp;&nbsp;&nbsp;&nbsp;solution.</li><br>
+&nbsp;&nbsp;&nbsp;&nbsp;Final concentration ; 0.1M NaCl 10mM phosphate buffer<br>
+7. Rotate the solution 24h at room temperature at low speed.</li><br>
+8. Centrifuge 60min at 45,000g.</li><br>
+9. Remove the supernatant and resuspend the red oil in the same volume of &nbsp;&nbsp;&nbsp;&nbsp;0.1M NaCl / 10mM sodium phosphate buffer.</li><br>
+10. Centrifuge 60min at 45,000g.</li><br>
+11. Remove the supernatant again and resuspend the red oil in the same &nbsp;&nbsp;&nbsp;volume of 0.3M NaCl / 0.01% sodium azide / 10mM sodium phosphate &nbsp;&nbsp;&nbsp;&nbsp;buffer.</li><br>
+12. easure Absorbance at 520nm. (0.26Abs)</li><br>
+<li>Calculate the concentration of the conjugate solution by using folulas &nbsp;&nbsp;&nbsp;&nbsp;below.</li>
 </ul2>
 <center>
 <i>C<sub>n</sub>=(A<sub>520</sub>×1)(10<sup>7</sup>×b)</i><br>
@@ -213,18 +213,22 @@ C<sub>n</sub>=(0.26(Abs)×1) / (10<sup>7</sup>×0.5)=0.52×10<sup>7</sup>M=<b>52
 <br>
 <h3>Method Ⅳ---Attaching AuNP on the surface of DNA origami and colum purification</h3>
 <ul2>
-<li>Mix 15μl DNA origami solution and 172.5μl AuNP-oligo solution and leave 1h at room temperature.</li>
-<li>Purify solution to remove excess staples and AuNP-oligo by using Sephacryl S-300HR  (GE healthcare). <a href="#(3)"font size="5" ><sup>(3)</sup></a></li>
+1. Mix 15μl DNA origami solution and 172.5μl AuNP-oligo solution and leave &nbsp;&nbsp;&nbsp;&nbsp;1h at room temperature.</li><br>
+2. Purify solution to remove excess staples and AuNP-oligo by using &nbsp;&nbsp;&nbsp;&nbsp;Sephacryl S-300HR  (GE healthcare). <a href="#(3)"font size="5" ><sup>(3)</sup></a></li><br>
 </ul2>
+<center><img src="./image/ex3.jpg" alt="サンプル" width="518px" height="226px"></center>
+
 <h3>Method Ⅴ---AFM observation <a href="#(3)"font size="5" ><sup>(3)</sup></a></h3>
 <ul2 type="disc">
-<li>Before AFM, add 2μl glue DNA solution to 98μl purified DNA origami with AuNP solution and leave it more than 1h.</li>
-<li>1μl sample were adsorbed on the mica sheet for 5min at room temperature and then add 50μl 1×TAE buffer.</li>
-<li><b>Get AFM images</b> using Multimode 8 (Bruker). </li>
-<li>AFM probes ; SCANASYST-FLUID (Nitride Coated Silicon Tip on a Nitride Cantilever), SCANASYST-FLUID＋(Silicon Tip on Nitride Lever</li>
+1. Before AFM, add 2μl glue DNA solution to 98μl purified DNA origami with &nbsp;&nbsp;&nbsp;&nbsp;AuNP solution and leave it more than 1h.</li><br>
+<center><img src="./image/ex4.jpg" alt="サンプル" width="276px" height="331px"></center>
+
+2. 1μl sample were adsorbed on the mica sheet for 5min at room &nbsp;&nbsp;&nbsp;&nbsp;temperature and then add 50μl 1×TAE buffer.</li><br>
+3. <b>Get AFM images</b> using Multimode 8 (Bruker). </li><br>
+4. AFM probes ; SCANASYST-FLUID (Nitride Coated Silicon Tip on a Nitride &nbsp;&nbsp;&nbsp;&nbsp;Cantilever), SCANASYST-FLUID＋(Silicon Tip on Nitride Lever)</li><br>
 
 <h3>Method Ⅵ---Absorbance determination </h3>
-<li><b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li>
+1. <b>Determine absorbance at 200-900nm </b>using V-630 UV VIS-Spectrophotometer (JASCO).</li><br>
 <li>Cuvette ;  5μl micro cell (stepped type)  (JASCO)</li>
 <br>
 <center>Table2. Sample solution 
@@ -309,9 +313,10 @@ thead th {
 	</tbody>
 </table>
 </center>
-
+<br>
+<br>
 <h2 id="step3">REFERENCE</h2>
-<a id="(1)">(1)</a> Paul W.K.Rothemund. Folding DNA to create nanoscale shapes and patterns. Nature. 2006 Mar 16;440(7082):297-302.<br>
+<a id="(1)">(1)</a> Paul W.K.Rothemund. Folding DNA to create nanoscale shapes and patterns. Nature. 2006 Mar 16;440(7082):297-302. <a href="sample7.html" title="sample7.html">image picture</a><br>
 <a id="(2)">(2)</a> Taton TA. Preparation of gold nanoparticle-DNA conjugates. Current Protocols in Nucleic Acid Chemistry. 2002 Aug;Chapter 12:Unit 12.2.<br>
 <a id="(3)">(3)</a>Wickham SF, Endo M, Katsuda Y, Hidaka K, Bath J, Sugiyama H, Turberfield AJ. Direct observation of stepwise movement of a synthetic molecular transporter. Nature Nanotechnology. 2011 Mar;6(3):166-9. <br>
 
