--- a/sample4.html
+++ b/sample4.html
@@ -43,6 +43,10 @@
 <ul>
 <a href="#step2"><li>SPECTRUM MEASUREMENT</li></a>
 </ul>
+<p>
+<ul>
+<a href="#step3"><li>DISCUSSION</li></a>
+</ul>
 </div>
 
 <font size="5">
@@ -109,6 +113,13 @@ Figure 4. Difference of absorption spectrum (200nm~900nm) of origami when glue s
 <p>
 All of the samples except the gold nanoparticles itself showed a similar absorbance pattern in the range of 200-400nm, with a peak between 200nm and 300nm. The rest of the wavelength did not show any absorbance. Origami with glue strands showed the highest absorbance, while AuNPs without the origami hardly had any absorbance.
 </p>
+<br>
+<h2 id="step3">3. DISCUSSION</h2>
+ <p>In this project, we aimed to synthesize DNA origami-attached AuNP and bind them each other to make a UV cutting sheet. </p>
+ <p><b>First</b>, <font color="#FF0099">we succeeded to confirm some structure of DNA origami by AFM experiment. The structure of rectangular DNA origami was clearly observed.</font> When we added glue DNA to the origami, we could see the change in origami arrangement. All of the origami were facing the same direction, and this seemed to occur by the binding effect of glue DNA. It was not a complete sheet we intended, but we can say that <font color="#FF0099">glue DNA has the ability to change the arrangement of origami rectangles</font> and if we realize optimal conditions, we might be able to make a complete flat sheet. We also tried to add AuNP-oligo DNA to origami rectangles to arrange AuNPs on the surface of origami. As a result, we obtained an AFM image that looked like AuNPs were attached to origami. Although we could not predicate they were AuNPs, we have room for improvement to attach AuNP to origami. Of course, we have some problems. For example, in our design, when origami rectangles bind to each other through glue DNA, a slight distortion may happen. Also, we used spin columns to purify AuNPs-attached origami, but this might have been inappropriate, because the centrifugal force may cut the binding between origami and AuNPs. <font color="#0000ff">To certainly make an origami sheet, we should improve its design and experimental protocol.</font> <b>To sum up these AFM result, we can say that we achieved the initial accomplishment to make AuNPs-attached DNA sheet regularly.</b> </p>
+ <p><b>Second</b>, we carried out absorption spectrum measurement. We expected that absorbance from 200nm to 400nm rises in origami sheet with AuNPs. As a result, <font color="#FF0099">we observed rise of absorbance in this range with samples of origami＋glue, origami＋AuNPs and origami＋glue+AuNPs.</font> The solution containing only AuNPs did not show a rise in the absorbance. Initially, we focused on the AuNPs’ ability to absorb UV and regarded DNA origami sheet as a tool arranging AuNPs regularly on surface, but these results suggest DNA origami itself also has the ability to cut UV and AuNPs have little effect cutting UV without the origami sheet. This was an unexpected effect and <font color="#0000ff"> we should think about both effects to improve UV-cutting ability of our sheet. </font></p>
+<p><b>Now</b> our project is at early stage of basic study, but we successfully made some accomplishment. For future work, <b>we can improve efficiency of sheet-formation and enhance UV-cutting property by modifying our design and synthesis protocol.</b> </p>
+
 </p>
 </div>
 </div>
