--- a/sample3.html
+++ b/sample3.html
@@ -55,17 +55,16 @@
 <div id="contents">
 <h1>EXPERIMENT</h1>
 <h2 id="step1">MATERIALS</h2>
-All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were purchased from Sigma-Aldrich Japan. 
-<br>
-Single-stranded M13mp18 DNA were purchased from BioLabs Inc.
+<li>All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were purchased from Sigma-Aldrich Japan. </li>
+<li>Single-stranded M13mp18 DNA were purchased from BioLabs Inc.</li>
 
 
 <h2 id="step2">EXPERIMENT METHODS</h2>
 <h3>Method Ⅰ---Designing the DNA origami</h3>
 <p>
 We designed our structure based on a previously established DNA origami
- <a href="#(1)"><sup>(1)</sup></a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>&nbsp;&nbsp;&nbsp;We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
-&nbsp;&nbsp;&nbsp;The tip of each triangle in the image below is where we attached the AuNP.
+ <a href="#(1)"><sup>(1)</sup></a> , and modified the strands a little. This modification was made to allow the AuNPs possible to attach to the sheet, and to allow the origami to connect to each other. The sequences of all the staple strands, the two different kinds of strands (glue strands) needed to connect the origami and the oligo DNA used to create the AuNP-anchor oligo DNA conjugate are available <a href="sample7.html" title="sample7.html">here</a>.<br>&nbsp;&nbsp;We designed the position of AuNPs attached to the sheet so that the distance between each gold particle becomes roughly the same.<br>
+&nbsp;&nbsp;The tip of each triangle in the image below is where we attached the AuNP.
 </p>
 
 
